US103/prod/k8s/Applications/Demos/Solar System/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solar-system-service
  namespace: demo-solar
  labels:
    app: solar-system
spec:
  type: NodePort
  selector:
    app: solar-system
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30333
